--- a/Accueil.html
+++ b/Accueil.html
@@ -27,15 +27,15 @@ Holistic guidance&nbsp;&amp;amp;&nbsp;energy healing, 01, Awesome Image, 02, Fre
 		"@context": "http://schema.org",
 		"@type": "Organization",
 		"name": "",
-		"logo": "images/default-logo.png"
+		"logo": "images/lune_logo.svg"
 }</script>
     <meta name="theme-color" content="#478ac9">
     <meta property="og:title" content="Accueil">
     <meta property="og:type" content="website">
   </head>
   <body class="u-body u-xl-mode" data-lang="fr"><header class="u-clearfix u-header u-header" id="sec-c0d9"><div class="u-clearfix u-sheet u-valign-middle u-sheet-1">
-        <a href="https://nicepage.com" class="u-image u-logo u-image-1">
-          <img src="images/default-logo.png" class="u-logo-image u-logo-image-1">
+        <a href="https://nicepage.com" class="u-image u-logo u-image-1" data-image-width="800" data-image-height="600">
+          <img src="images/lune_logo.svg" class="u-logo-image u-logo-image-1">
         </a>
         <nav class="u-menu u-menu-dropdown u-offcanvas u-menu-1">
           <div class="menu-collapse" style="font-size: 1rem; letter-spacing: 0px;">
@@ -70,7 +70,9 @@ Holistic guidance&nbsp;&amp;amp;&nbsp;energy healing, 01, Awesome Image, 02, Fre
         <div class="u-align-center-lg u-align-center-md u-align-center-xl u-border-6 u-border-white u-container-style u-expanded-width-sm u-expanded-width-xs u-group u-opacity u-opacity-15 u-group-1">
           <div class="u-container-layout u-valign-middle u-container-layout-1">
             <h6 class="u-align-center-sm u-align-center-xs u-custom-font u-text u-text-font u-text-1">:</h6>
-            <h1 class="u-align-center-sm u-align-center-xs u-custom-font u-font-playfair-display u-text u-title u-text-2"><b></b>CECILE ☾ CORE <br>Holistic guidance&nbsp;<br>&amp;&nbsp;energy healing&nbsp;<br>
+            <h1 class="u-align-center-sm u-align-center-xs u-custom-font u-font-playfair-display u-text u-title u-text-2"><b></b>CECILE ☾ CORE <br>
+              <span style="font-size: 3rem;">Holistic guidance&nbsp;<br>&amp;&nbsp;energy healing
+              </span>&nbsp;<br>
             </h1>
             <h6 class="u-align-center-sm u-align-center-xs u-custom-font u-text u-text-font u-text-3">:</h6>
           </div>
