site web version 02

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     <meta property="og:type" content="website">
   </head>
   <body data-home-page="Accueil.html" data-home-page-title="Accueil" class="u-body u-xl-mode" data-lang="fr"><header class="u-clearfix u-header u-header" id="sec-c0d9"><div class="u-clearfix u-sheet u-valign-middle u-sheet-1">
-        <a href="https://nicepage.com" class="u-image u-logo u-image-1" data-image-width="800" data-image-height="600">
+        <a href="Accueil.html" data-page-id="82066530" class="u-image u-logo u-image-1" data-image-width="800" data-image-height="600" title="Accueil">
           <img src="images/lune_logo.svg" class="u-logo-image u-logo-image-1">
         </a>
         <nav class="u-menu u-menu-one-level u-offcanvas u-menu-1">
@@ -69,8 +69,9 @@
             <h1 class="u-align-center-sm u-align-center-xs u-custom-font u-font-playfair-display u-text u-text-default u-title u-text-2"><b></b>CECILE ☾ CORE <br>
               <span style="font-size: 2.25rem;">
                 <br>
-                <span style="font-size: 2.25rem;"></span>
-              </span><b style="font-size: 2.25rem;">Accompagnement holistique&nbsp;<br>&amp; soins énergétiques</b>&nbsp;<br>
+              </span><b style="font-size: 2.25rem;">
+                <span style="font-size: 2.0625rem;">Accompagnement holistique&nbsp;<br>&amp; soins énergétiques
+                </span></b>&nbsp;<br>
             </h1>
             <h6 class="u-align-center-sm u-align-center-xs u-custom-font u-text u-text-font u-text-3">:</h6>
           </div>
@@ -84,10 +85,12 @@
             <div class="u-layout-row">
               <div class="u-align-left u-container-style u-layout-cell u-left-cell u-size-30 u-layout-cell-1">
                 <div class="u-container-layout u-valign-top u-container-layout-1">
-                  <h1 class="u-text u-text-body-alt-color u-text-1"> ☾ </h1>
+                  <h1 class="u-text u-text-body-alt-color u-text-1">
+                    <span style="font-weight: 400;">☾ </span>
+                  </h1>
                   <h2 class="u-custom-font u-font-playfair-display u-text u-text-default u-text-2"><b>Thérapie énergétique adaptative&nbsp;</b>
                   </h2>
-                  <p class="u-text u-text-default u-text-3"> A<b>ccompagnement et rééquilibrage</b>
+                  <p class="u-text u-text-default u-text-3"><b>Accompagnement et rééquilibrage</b>
                     <br><b>Travail au niveau des chakras</b>
                     <br><b>Relâchement des blocages énergétiques</b>
                     <br><b>Récupération d'énergie</b>
@@ -96,12 +99,14 @@
               </div>
               <div class="u-container-style u-layout-cell u-right-cell u-size-30 u-layout-cell-2">
                 <div class="u-container-layout u-valign-top u-container-layout-2">
-                  <h1 class="u-align-left u-text u-text-body-alt-color u-text-4"> ☾ </h1>
-                  <h2 class="u-align-center u-custom-font u-font-playfair-display u-text u-text-default u-text-5"><b>tarot | astrologie | pierres et cristaux&nbsp;</b>
+                  <h1 class="u-align-left u-text u-text-body-alt-color u-text-4">
+                    <span style="font-weight: 400;">☾ </span>
+                  </h1>
+                  <h2 class="u-align-center u-custom-font u-font-playfair-display u-text u-text-default u-text-5"><b>Tarot | Astrologie | Pierres et cristaux&nbsp;</b>
                   </h2>
-                  <p class="u-align-left u-text u-text-default u-text-6"> L<b>ecture de tarot et analyse intuitive</b>
-                    <br><b>Thème astral comme “carte de route”</b>
-                    <br><b>Cristaux personnalisés</b><b>&nbsp;sélectionnés pour vous</b>
+                  <p class="u-align-left u-text u-text-default u-text-6"><b>Lecture de tarot et analyse intuitive</b>
+                    <br><b>Votre thème astral “carte de route”</b>
+                    <br><b>Vos cristaux personnalisés</b>
                     <br>
                   </p>
                 </div>
@@ -122,7 +127,7 @@
               </div>
             </div>
             <div class="u-align-center u-container-style u-image u-layout-cell u-right-cell u-size-30 u-image-2">
-              <div class="u-container-layout u-valign-bottom u-container-layout-2">
+              <div class="u-container-layout u-container-layout-2">
                 <h3 class="u-custom-font u-font-playfair-display u-text u-text-2">Core<br><b>“Au centre”</b>
                   <br>
                 </h3>
@@ -195,16 +200,19 @@
         </div>
       </div>
     </section>
-    <section class="u-clearfix u-custom-color-1 u-section-5" id="carousel_a9ce">
+    <section class="u-clearfix u-custom-color-2 u-section-5" id="carousel_a9ce">
       <div class="u-clearfix u-sheet u-valign-middle u-sheet-1">
         <div class="u-clearfix u-expanded-width u-layout-wrap u-layout-wrap-1">
           <div class="u-layout">
             <div class="u-layout-row">
               <div class="u-container-style u-layout-cell u-left-cell u-size-30 u-layout-cell-1">
                 <div class="u-container-layout u-container-layout-1">
-                  <h2 class="u-custom-font u-font-playfair-display u-text u-text-default u-text-1">Découvrez&nbsp;<b>Cecile Core</b>
+                  <h2 class="u-custom-font u-font-playfair-display u-text u-text-default u-text-1">Découvrez&nbsp;<b>
+                      <br>Cecile Core</b>
+                    <br>
+                    <br>
                   </h2>
-                  <p class="u-text u-text-2">
+                  <p class="u-text u-text-default u-text-2">
                     <span style="font-weight: 700;"></span><b>
                       <span style="font-weight: 400;">Ni une gourou, ni une coach, ni une magicienne !</span>
                       <br>
@@ -212,7 +220,7 @@
                       <span style="font-weight: 400;">Cecile est une praticienne en médecine holistique avec une approche scientifique de la santé et du bien-être, notamment axée sur la régulation du système nerveux.</span>
                       <br>
                       <br>
-                      <span style="font-weight: 400;">Cecile est une empathe. Elle a la capacité de ressentir au niveau énergétique, cerner et aider à réguler la <span style="font-style: italic;">douleur</span> chez autrui. Elle possède des habiletés innées, de part ses origines caribéenne-autochtone des Antilles, qu’elle a apprises à maîtriser et utiliser : don d’hypersensibilité, ressentis sensoriels très élevés, douance émotionnelle et compréhension de l’autre.
+                      <span style="font-weight: 400;">Cecile est une empathe. Elle a la capacité de ressentir au niveau énergétique, cerner et aider à réguler la <span style="font-style: italic;">douleur</span> chez autrui. Elle possède des habiletés innées, de part ses origines caribéenne-autochtone des Antilles : don d'intuition et d’hypersensibilité, douance émotionnelle et compréhension de l’autre.
                       </span>
                       <br></b>
                   </p>
@@ -220,18 +228,32 @@
               </div>
               <div class="u-container-style u-layout-cell u-right-cell u-size-30 u-layout-cell-2">
                 <div class="u-container-layout u-container-layout-2">
-                  <p class="u-align-center u-text u-text-3">"&nbsp;<b>
-                      <span style="font-weight: 400;">Bonjour!&nbsp;<br>Je suis thérapeute holistique et guérisseuse énergétique basée à Tio'tia:ke / Montréal.
-                      </span></b>
+                  <p class="u-align-left u-custom-font u-font-playfair-display u-text u-text-default u-text-3">
+                    <span style="font-size: 4.8125rem;">“</span>
+                    <span style="font-size: 4.8125rem;">
+                      <br>
+                    </span><b>
+                      <span style="font-weight: 400;">Bonjour!&nbsp;</span></b>
+                    <span style="font-weight: 700;">
+                      <br>
+                      <br><b>
+                        <span style="font-weight: 400;">Je suis thérapeute holistique et guérisseuse énergétique basée à Tio'tia:ke / Montréal.</span></b>
+                      <br>
+                      <br><b>
+                        <span style="font-weight: 400;">Je sers de <span style="font-style: italic;">médium</span>,&nbsp;
+                        </span></b>d’interprète de messages.<b>
+                        <span style="font-weight: 400;">&nbsp;Par définition un <span style="font-style: italic;">médium </span>est un moyen de transmission d'un message, un décodeur.
+                        </span></b>
+                      <br>
+                      <br><b>
+                        <span style="font-weight: 400;">J’agis comme un réflecteur pour faire remonter les intentions et vous permettre de vous voir en miroir, de voir et comprendre ces messages.<br>
+                        </span></b>
+                      <br><b>
+                        <span style="font-weight: 400;">Ainsi je vous amène à une réflexion par rapport à ce qui se cache sous vos yeux et permet de libérer vos blocages : les problèmes que votre corps somatise qui créent des douleurs, des désagréments, au niveau du corps, du cœur et de l'esprit.</span></b>
+                    </span>
                     <br>
-                    <br><b>
-                      <span style="font-weight: 400;">Je sers de <span style="font-style: italic;">médium</span>. Par définition un <span style="font-style: italic;">médium </span>est un moyen de transmission d'un message, un décodeur.
-                      </span></b>
                     <br>
-                    <br><b>
-                      <span style="font-weight: 400;">Au-delà de ma capacité de médium et donc d’interprète de messages, j’agis comme un réflecteur pour faire remonter les intentions et vous permettre de vous voir en miroir, de voir et comprendre ces messages.<br>Ainsi je vous amène à une réflexion par rapport à ce qui se cache sous vos yeux et permet de libérer vos blocages : les problèmes que votre corps somatise qui créent des douleurs, des désagréments, au niveau du corps, du cœur et de l'esprit. "
-                      </span></b>
-                    <br>
+                    <span style="font-size: 4.8125rem;"> ”</span>
                   </p>
                 </div>
               </div>
@@ -244,7 +266,7 @@
       <div class="u-clearfix u-expanded-width u-layout-wrap u-layout-wrap-1">
         <div class="u-layout">
           <div class="u-layout-row">
-            <div class="u-container-style u-image u-layout-cell u-left-cell u-size-30 u-image-1">
+            <div class="u-container-style u-image u-layout-cell u-left-cell u-size-30 u-image-1" data-image-width="902" data-image-height="1256">
               <div class="u-container-layout u-container-layout-1"></div>
             </div>
             <div class="u-container-style u-image u-layout-cell u-right-cell u-size-30 u-image-2" data-image-width="800" data-image-height="533">
@@ -261,18 +283,18 @@
     </section>
     <section class="u-align-left u-clearfix u-image u-shading u-section-7" id="carousel_d788">
       <div class="u-clearfix u-sheet u-sheet-1">
-        <h1 class="u-custom-font u-font-playfair-display u-text u-text-body-color u-text-default-xs u-text-1"><b>“Ce qui se cache juste sous vos yeux”</b>
+        <h1 class="u-custom-font u-font-playfair-display u-text u-text-body-color u-text-default-xs u-text-1"><b>“<span style="font-weight: 400;">Ce qui se cache</span> juste sous vos yeux”</b>
         </h1>
       </div>
     </section>
     <section class="u-align-center u-clearfix u-image u-shading u-section-8" src="" data-image-width="1200" data-image-height="800" id="sec-55e3">
-      <div class="u-clearfix u-sheet u-valign-middle u-sheet-1">
-        <h1 class="u-text u-text-default u-title u-text-1"><b>“Core”</b>
+      <div class="u-clearfix u-sheet u-sheet-1">
+        <h1 class="u-custom-font u-font-playfair-display u-text u-text-default u-title u-text-1"><b> Core</b>
           <br>
         </h1>
-        <p class="u-large-text u-text u-text-default u-text-variant u-text-2"><b>Signifie « cœur » ou « noyau »</b>
+        <p class="u-custom-font u-heading-font u-large-text u-text u-text-default u-text-variant u-text-2"><b>Signifie « <span style="font-style: italic; font-weight: 400;">cœur </span>» ou « <span style="font-style: italic; font-weight: 400;">noyau </span>»</b>
         </p>
-        <a href="https://www.instagram.com/cecilecore.energy/" class="u-btn u-button-style u-custom-color-2 u-btn-1" target="_blank">Découvrir</a>
+        <a href="https://www.instagram.com/cecilecore.energy/" class="u-btn u-button-style u-custom-color-2 u-custom-font u-heading-font u-btn-1" target="_blank">Découvrir</a>
       </div>
     </section>
     <section class="u-clearfix u-section-9" id="sec-3dd6">
@@ -284,12 +306,13 @@
                 <div class="u-container-layout u-container-layout-1"></div>
               </div>
               <div class="u-align-center u-container-style u-layout-cell u-size-30 u-layout-cell-2">
-                <div class="u-container-layout u-container-layout-2">
-                  <h2 class="u-text u-text-default u-text-1">Contacter</h2>
-                  <p class="u-text u-text-2">Tél: 438 600-7301<br>
-                    <br>Email:&nbsp;<a href="mailto:cecilecore.energy@gmail.com" class="u-active-none u-border-none u-btn u-button-link u-button-style u-hover-none u-none u-text-palette-1-base u-btn-1" target="_blank">cecilecore.energy@gmail.com</a>
+                <div class="u-container-layout u-valign-bottom-xs u-container-layout-2">
+                  <h2 class="u-custom-font u-font-playfair-display u-text u-text-default u-text-1">Contacter</h2>
+                  <p class="u-custom-font u-heading-font u-text u-text-default u-text-2">
+                    <a href="mailto:cecilecore.energy@gmail.com" class="u-active-none u-border-none u-btn u-button-link u-button-style u-hover-none u-none u-text-custom-color-2 u-btn-1" target="_blank">cecilecore.energy@gmail.com</a>
+                    <br>438 600-7301<br>Insta: <a href="https://www.instagram.com/cecilecore.energy/" class="u-active-none u-border-none u-btn u-button-link u-button-style u-hover-none u-none u-text-custom-color-2 u-btn-2" target="_blank">cecilecore.energy</a>
                     <br>
-                    <br>Instagram: <a href="https://www.instagram.com/cecilecore.energy/" class="u-active-none u-border-none u-btn u-button-link u-button-style u-hover-none u-none u-text-palette-1-base u-btn-2" target="_blank">cecilecore.energy</a>
+                    <br>☾&nbsp;<br>
                   </p>
                 </div>
               </div>
@@ -301,7 +324,8 @@
     
     
     <footer class="u-align-center u-clearfix u-footer u-grey-80 u-footer" id="sec-108f"><div class="u-clearfix u-sheet u-sheet-1">
-        <p class="u-small-text u-text u-text-variant u-text-1">Exemple de texte. Cliquez pour sélectionner l'élément de texte.</p>
+        <p class="u-small-text u-text u-text-variant u-text-1"><b>©CECILE CORE - 2022</b>
+        </p>
       </div></footer>
     <section class="u-backlink u-clearfix u-grey-80">
       <a class="u-link" href="https://nicepage.com/website-templates" target="_blank">
