--- a/index.html
+++ b/index.html
@@ -64,34 +64,38 @@
     <section class="u-clearfix u-image u-shading u-section-1" id="carousel_d599">
       <div class="u-clearfix u-sheet u-valign-middle-lg u-valign-middle-md u-valign-middle-xl u-sheet-1">
         <div class="u-align-center-lg u-align-center-md u-align-center-xl u-border-6 u-border-white u-container-style u-expanded-width-sm u-expanded-width-xs u-group u-opacity u-opacity-15 u-group-1">
-          <div class="u-container-layout u-valign-middle u-container-layout-1">
-            <h6 class="u-align-center-sm u-align-center-xs u-custom-font u-text u-text-font u-text-1">:</h6>
-            <h1 class="u-align-center-sm u-align-center-xs u-custom-font u-font-playfair-display u-text u-text-default u-title u-text-2"><b></b>CECILE ☾ CORE <br>
+          <div class="u-container-layout u-container-layout-1">
+            <h1 class="u-align-center-sm u-align-center-xs u-custom-font u-font-playfair-display u-text u-text-default u-title u-text-1"><b></b>
+              <span style="font-size: 4.5rem;">CECILE CORE</span>
+              <br>
               <span style="font-size: 2.25rem;">
                 <br>
               </span><b style="font-size: 2.25rem;">
-                <span style="font-size: 2.0625rem;">Accompagnement holistique&nbsp;<br>&amp; soins énergétiques
-                </span></b>&nbsp;<br>
+                <span style="font-size: 1.875rem;"></span></b>
+              <span style="font-size: 1.875rem;">&nbsp;</span>
+              <br>
             </h1>
-            <h6 class="u-align-center-sm u-align-center-xs u-custom-font u-text u-text-font u-text-3">:</h6>
+            <h6 class="u-align-center-sm u-align-center-xs u-custom-font u-text u-text-font u-text-2"><b>Accompagnement holistique<br>
+                <br>soins énergétiques</b>
+            </h6>
           </div>
         </div>
       </div>
     </section>
     <section class="u-align-center u-clearfix u-custom-color-1 u-section-2" id="carousel_078f">
-      <div class="u-clearfix u-sheet u-valign-middle u-sheet-1">
+      <div class="u-clearfix u-sheet u-sheet-1">
         <div class="u-clearfix u-expanded-width u-gutter-30 u-layout-wrap u-layout-wrap-1">
           <div class="u-gutter-0 u-layout">
             <div class="u-layout-row">
-              <div class="u-align-left u-container-style u-layout-cell u-left-cell u-size-30 u-layout-cell-1">
-                <div class="u-container-layout u-valign-top u-container-layout-1">
-                  <h1 class="u-text u-text-body-alt-color u-text-1">
-                    <span style="font-weight: 400;">☾ </span>
-                  </h1>
-                  <h2 class="u-custom-font u-font-playfair-display u-text u-text-default u-text-2"><b>Thérapie énergétique adaptative&nbsp;</b>
+              <div class="u-container-style u-layout-cell u-left-cell u-size-30 u-layout-cell-1">
+                <div class="u-container-layout u-container-layout-1">
+                  <h1 class="u-align-left u-text u-text-body-alt-color u-text-1"></h1>
+                  <h2 class="u-align-center u-custom-font u-font-playfair-display u-text u-text-2"><b>
+                      <span style="font-size: 1.875rem;">Thérapie énergétique adaptative</span>
+                      <br>
+                      <span style="font-size: 2.25rem;">Visualisation guidée&nbsp;</span></b>
                   </h2>
-                  <p class="u-text u-text-default u-text-3"><b>Accompagnement et rééquilibrage</b>
-                    <br><b>Travail au niveau des chakras</b>
+                  <p class="u-align-left u-text u-text-default u-text-3"><b>Accompagnement et rééquilibrage</b>
                     <br><b>Relâchement des blocages énergétiques</b>
                     <br><b>Récupération d'énergie</b>
                   </p>
@@ -99,9 +103,7 @@
               </div>
               <div class="u-container-style u-layout-cell u-right-cell u-size-30 u-layout-cell-2">
                 <div class="u-container-layout u-valign-top u-container-layout-2">
-                  <h1 class="u-align-left u-text u-text-body-alt-color u-text-4">
-                    <span style="font-weight: 400;">☾ </span>
-                  </h1>
+                  <h1 class="u-align-left u-text u-text-body-alt-color u-text-4"></h1>
                   <h2 class="u-align-center u-custom-font u-font-playfair-display u-text u-text-default u-text-5"><b>Tarot | Astrologie | Pierres et cristaux&nbsp;</b>
                   </h2>
                   <p class="u-align-left u-text u-text-default u-text-6"><b>Lecture de tarot et analyse intuitive</b>
@@ -122,7 +124,8 @@
           <div class="u-layout-row">
             <div class="u-align-center-sm u-align-center-xs u-container-style u-image u-layout-cell u-left-cell u-size-30 u-image-1">
               <div class="u-container-layout u-valign-top u-container-layout-1">
-                <p class="u-align-center-lg u-align-center-md u-align-center-xl u-text u-text-1"><b>Soins énergétiques traditionnels des Caraïbes</b>
+                <p class="u-align-center-lg u-align-center-md u-align-center-xl u-text u-text-1"><b>Soins énergétiques visualisation</b>
+                  <br>
                 </p>
               </div>
             </div>
@@ -237,7 +240,7 @@
                     <span style="font-weight: 700;">
                       <br>
                       <br><b>
-                        <span style="font-weight: 400;">Je suis thérapeute holistique et guérisseuse énergétique basée à Tio'tia:ke / Montréal.</span></b>
+                        <span style="font-weight: 400;">Je suis thérapeute holistique et énergéticienne basée à Montréal.</span></b>
                       <br>
                       <br><b>
                         <span style="font-weight: 400;">Je sers de <span style="font-style: italic;">médium</span>,&nbsp;
@@ -307,12 +310,13 @@
               </div>
               <div class="u-align-center u-container-style u-layout-cell u-size-30 u-layout-cell-2">
                 <div class="u-container-layout u-valign-bottom-xs u-container-layout-2">
-                  <h2 class="u-custom-font u-font-playfair-display u-text u-text-default u-text-1">Contacter</h2>
+                  <h2 class="u-custom-font u-font-playfair-display u-text u-text-default u-text-1">Contact</h2>
                   <p class="u-custom-font u-heading-font u-text u-text-default u-text-2">
                     <a href="mailto:cecilecore.energy@gmail.com" class="u-active-none u-border-none u-btn u-button-link u-button-style u-hover-none u-none u-text-custom-color-2 u-btn-1" target="_blank">cecilecore.energy@gmail.com</a>
                     <br>438 600-7301<br>Insta: <a href="https://www.instagram.com/cecilecore.energy/" class="u-active-none u-border-none u-btn u-button-link u-button-style u-hover-none u-none u-text-custom-color-2 u-btn-2" target="_blank">cecilecore.energy</a>
                     <br>
-                    <br>☾&nbsp;<br>
+                    <br>
+                    <br>
                   </p>
                 </div>
               </div>
@@ -324,7 +328,7 @@
     
     
     <footer class="u-align-center u-clearfix u-footer u-grey-80 u-footer" id="sec-108f"><div class="u-clearfix u-sheet u-sheet-1">
-        <p class="u-small-text u-text u-text-variant u-text-1"><b>©CECILE CORE - 2022</b>
+        <p class="u-small-text u-text u-text-variant u-text-1"><b>©CECILE CORE - 2023</b>
         </p>
       </div></footer>
     <section class="u-backlink u-clearfix u-grey-80">
