--- a/Home.html
+++ b/Home.html
@@ -29,7 +29,7 @@
     <meta property="og:title" content="Home">
     <meta property="og:type" content="website">
   <meta data-intl-tel-input-cdn-path="intlTelInput/"></head>
-  <body data-home-page="Home.html" data-home-page-title="Home" class="u-body u-xl-mode" data-lang="fr"><header class="u-clearfix u-header u-header" id="sec-c0d9"><div class="u-clearfix u-sheet u-valign-middle u-sheet-1">
+  <body class="u-body u-xl-mode" data-lang="fr"><header class="u-clearfix u-header u-header" id="sec-c0d9"><div class="u-clearfix u-sheet u-valign-middle u-sheet-1">
         <a href="Home.html" class="u-image u-logo u-image-1" data-image-width="800" data-image-height="600" title="Accueil">
           <img src="images/lune_logo.svg" class="u-logo-image u-logo-image-1">
         </a>
