--- a/About.html
+++ b/About.html
@@ -75,7 +75,7 @@
                     <br>
                   </h2>
                   <p class="u-text u-text-default u-text-2">
-                    <span style="font-weight: 700;"></span>Not a guru, not a coach, not a magician. No bs!<br>
+                    <span style="font-weight: 700;"></span>Not a guru, not a coach, not a magician!<br>
                     <br><b>
                       <span style="font-weight: 400;"></span></b>Cecile is a holistic medicine practitioner. Her approach to health and well-being focuses on the regulation of the nervous system and<b>
                       <span style="font-weight: 400;">&nbsp;emphasizes self-compassion, practicality and empowerment</span></b> .<b>
