--- a/Services.html
+++ b/Services.html
@@ -97,6 +97,7 @@
                       <span style="font-weight: 400;">&nbsp;treatment for releasing blockages &amp; energy recovery (1hr) <span style="font-style: italic;">- $90</span>
                       </span></b>
                   </h6>
+                  <p class="u-small-text u-text u-text-variant u-text-2">All services are offered in English and French / Tous les services sont offerts en anglais et en français.</p>
                 </div>
               </div>
             </div>
