--- a/Contact.html
+++ b/Contact.html
@@ -81,7 +81,7 @@
               <div class="u-container-layout u-container-layout-1"></div>
             </div>
             <div class="u-container-style u-layout-cell u-size-30 u-layout-cell-2">
-              <div class="u-container-layout u-valign-middle u-container-layout-2">
+              <div class="u-container-layout u-container-layout-2">
                 <img class="u-image u-image-contain u-image-default u-preserve-proportions u-image-2" src="images/image4.png" alt="" data-image-width="246" data-image-height="205">
                 <p class="u-align-center u-custom-font u-heading-font u-text u-text-default u-text-1">
                   <a href="mailto:cecilecore.energy@gmail.com" class="u-active-none u-border-none u-btn u-button-link u-button-style u-hover-none u-none u-text-active-palette-5-dark-3 u-text-body-color u-text-hover-custom-color-2 u-btn-1" target="_blank">cecilecore.energy@gmail.com</a>
@@ -94,8 +94,8 @@
                   <br>
                   <br>
                 </p>
-                <img class="u-image u-image-contain u-image-default u-preserve-proportions u-image-3" src="images/image2.png" alt="" data-image-width="248" data-image-height="203">
-                <img class="u-image u-image-contain u-image-default u-preserve-proportions u-image-4" src="images/image3.png" alt="" data-image-width="200" data-image-height="200">
+                <img class="u-image u-image-contain u-image-default u-preserve-proportions u-image-3" src="images/image3.png" alt="" data-image-width="200" data-image-height="200">
+                <img class="u-image u-image-contain u-image-default u-preserve-proportions u-image-4" src="images/image5.png" alt="" data-image-width="245" data-image-height="200">
               </div>
             </div>
           </div>
