--- a/Home.html
+++ b/Home.html
@@ -75,7 +75,8 @@
               <br>
               <br>
             </h1>
-            <h3 class="u-align-center-sm u-align-center-xs u-text u-text-2"> N<b>o bullshit<br>
+            <h3 class="u-align-center-sm u-align-center-xs u-text u-text-2">
+              <span style="font-weight: 700;">N</span><b>o bullshit<br>
                 <br>Holistic therapy</b>
             </h3>
           </div>
