--- a/Contact.html
+++ b/Contact.html
@@ -91,8 +91,7 @@
                   </a>
                   <br>&nbsp;<a href="https://www.instagram.com/cecilecore.energy/" class="u-active-none u-border-none u-btn u-button-link u-button-style u-hover-none u-none u-text-active-palette-5-dark-3 u-text-body-color u-text-hover-custom-color-2 u-btn-3" target="_blank">cecilecore.energy</a>
                   <br>
-                  <br>
-                  <br>
+                  <br>-Montreal, QC-
                 </p>
                 <img class="u-image u-image-contain u-image-default u-preserve-proportions u-image-3" src="images/image3.png" alt="" data-image-width="200" data-image-height="200">
                 <img class="u-image u-image-contain u-image-default u-preserve-proportions u-image-4" src="images/image5.png" alt="" data-image-width="245" data-image-height="200">
