--- a/Services.html
+++ b/Services.html
@@ -67,7 +67,7 @@
           <div class="u-gutter-0 u-layout">
             <div class="u-layout-row">
               <div class="u-align-left u-container-style u-layout-cell u-size-60 u-layout-cell-1">
-                <div class="u-container-layout u-valign-middle u-container-layout-1">
+                <div class="u-container-layout u-valign-middle-lg u-valign-middle-md u-valign-middle-sm u-valign-middle-xl u-container-layout-1">
                   <h6 class="u-text u-text-1"><b>
                       <br>
                       <span style="font-weight: 400;">
@@ -76,28 +76,31 @@
                       </span></b>☾&nbsp;<b>
                       <span style="font-weight: 400;"><b>
                           <span style="font-weight: 400;">
-                            <span style="font-weight: 700;">Tarot:</span> intuitive "Oracle reading" (45min) <span style="font-style: italic;">- $60</span>
+                            <span style="font-weight: 700;">Tarot:</span> intuitive 
+                          </span></b>
+                      </span></b>
+                    <span style="font-weight: 400;">“Oracle”&nbsp;</span><b>
+                      <span style="font-weight: 400;"><b>
+                          <span style="font-weight: 400;">reading (30min) <span style="font-style: italic;">- $60</span>
                           </span></b>
                         <br>
                         <br>
-                      </span></b> ☾&nbsp;<b>Astro chart: <span style="font-weight: 400;">exploring your birth chart as a “road map” (1hr) <span style="font-style: italic;">- $70</span>
+                      </span></b> ☾&nbsp;<b>Astro chart: <span style="font-weight: 400;">exploring your birth chart as a “road map” (45min) <span style="font-style: italic;">- $70</span>
                       </span></b>
                     <br>
-                    <br>☾&nbsp;<b>Crystals activation:&nbsp;<span style="font-weight: 400;">includes a 30min&nbsp;</span></b>
+                    <br>☾&nbsp;<b>Crystals:&nbsp;<span style="font-weight: 400;">includes a 20min&nbsp;</span></b>
                     <span style="font-weight: 400;">assessement</span>&nbsp;<b>
                       <span style="font-weight: 400;">call + purchasing &amp; programming crystals specifically selected for you <span style="font-style: italic;">- $80</span>
                       </span></b>
                     <br>
-                    <br>☾ Aura massage:<span style="font-weight: 400;">
-                      <span style="font-weight: 400;">&nbsp;20</span>
-                    </span>
-                    <span style="font-weight: 400;">min</span>&nbsp;<b>
+                    <br>☾ Energy healing: <span style="font-weight: 400;"></span><b>
                       <span style="font-weight: 400;">guidance talk followed by a&nbsp;</span></b>
                     <span style="font-weight: 400;">rebalancing</span><b>
-                      <span style="font-weight: 400;">&nbsp;treatment for releasing blockages &amp; energy recovery (1hr) <span style="font-style: italic;">- $90</span>
+                      <span style="font-weight: 400;">&nbsp;treatment for releasing blockages &amp; for energy recovery (60min) <span style="font-style: italic;">- $90</span>
                       </span></b>
                   </h6>
-                  <p class="u-small-text u-text u-text-variant u-text-2">All services are offered in English and French / Tous les services sont offerts en anglais et en français.</p>
+                  <p class="u-small-text u-text u-text-variant u-text-2">**Tous les services sont aussi offerts en <span style="font-weight: 700;">français.</span>
+                  </p>
                 </div>
               </div>
             </div>
