--- a/About.html
+++ b/About.html
@@ -77,7 +77,7 @@
                   <p class="u-text u-text-default u-text-2">
                     <span style="font-weight: 700;"></span>Not a guru, not a coach, not a magician!<br>
                     <br><b>
-                      <span style="font-weight: 400;"></span></b>Cecile is a holistic medicine practitioner. Her approach to health and well-being focuses on the regulation of the nervous system and<b>
+                      <span style="font-weight: 400;"></span></b>Cecile is a holistic medicine practitioner. Her approach to health and well-being focuses on&nbsp; treating the whole person rather than individual symptoms and<b>
                       <span style="font-weight: 400;">&nbsp;emphasizes self-compassion, practicality and empowerment</span></b> .<b>
                       <br></b>
                   </p>
@@ -99,14 +99,11 @@
               <div class="u-container-layout u-valign-middle u-container-layout-2">
                 <h6 class="u-align-center u-text u-text-body-alt-color u-text-1"><b> "</b><b></b><b>I'm not here to tell you what to do</b>
                   <br>
+                  <br>
                   <br><b>I'm here to listen very deeply<br>And t​o hear things that you may not be hearing<br>
-                    <br>In the tone, in between the lines<br>
-                    <br>I help reflect that to you<br>
-                    <br>And I ask <span style="font-style: italic;">Did you hear that?&nbsp;</span>
-                    <br>
-                    <span style="font-style: italic;">Do you see that?</span>
-                    <br>
-                    <br>In order to guide you towards the breakthroughs that you're really wanting<br>&nbsp;<br>We can find pathways to your freedom</b><b>"</b>
+                    <br>In order to guide you towards the breakthroughs that you're really wanting<br>&nbsp;</b>
+                  <br>
+                  <br><b>We can find pathways to your freedom</b><b>"</b>
                 </h6>
               </div>
             </div>
@@ -115,13 +112,13 @@
       </div>
     </section>
     <section class="u-clearfix u-custom-color-2 u-section-3" id="carousel_0d50">
-      <div class="u-clearfix u-sheet u-valign-middle u-sheet-1">
+      <div class="u-clearfix u-sheet u-valign-middle-lg u-valign-middle-md u-valign-middle-sm u-valign-middle-xl u-sheet-1">
         <div class="u-clearfix u-expanded-width u-layout-wrap u-layout-wrap-1">
-          <div class="u-gutter-0 u-layout">
-            <div class="u-layout-row">
+          <div class="u-gutter-0 u-layout" style="">
+            <div class="u-layout-row" style="">
               <div class="u-container-style u-layout-cell u-size-60 u-layout-cell-1">
                 <div class="u-container-layout u-container-layout-1">
-                  <h2 class="u-align-center u-custom-font u-font-playfair-display u-text u-text-default u-text-1">
+                  <h2 class="u-align-center u-custom-font u-font-playfair-display u-text u-text-default-lg u-text-default-md u-text-default-sm u-text-default-xl u-text-1">
                     <span style="font-size: 3.75rem;"> “ </span>
                     <span style="font-size: 1.25rem;">
                       <span style="font-size: 3.75rem;">
@@ -129,15 +126,13 @@
                       </span><b>
                         <span style="font-weight: 400;">Hi&nbsp;!&nbsp;</span></b>
                       <br>
-                      <br><b></b>I'm Cecile, a <span style="font-weight: 700;">holistic therapist</span> and <span style="font-weight: 700;">energy healer</span> based in Montreal.<br>
-                      <br><b></b>I serve as a <span style="font-weight: 700;">medium</span>, an interpreter of messages. By definition, a medium is a means of transmitting a message, a decoder.<br>
-                      <br><b></b>I act as a <span style="font-weight: 700;">catalyst</span> to bring up intentions and as a <span style="font-weight: 700;">reflector</span>&nbsp;for you to see yourself, to see and understand the messages your physical &amp; energetic body is sending you.<br>
-                      <br>I bring you to reflect on what is hidden right before your eyes and help you <span style="font-weight: 700;">release blockages.</span>
+                      <br><b></b>I'm Cecile Core, a <span style="font-weight: 700;">holistic therapist</span> and <span style="font-weight: 700;">energy healer</span> based in Montreal.<br>
+                      <br><b></b>I work as a <span style="font-weight: 700;">medium</span>, an interpreter of messages. By definition, a medium is a means of transmitting a message, a decoder.<br>
+                      <br><b></b>I serve as a <span style="font-weight: 700;">catalyst</span> to bring up intentions and as a <span style="font-weight: 700;">reflector</span>&nbsp;for you to see yourself:&nbsp;<br>to see and understand the messages your physical &amp; energetic body is sending you.<br>
+                      <br>I help you <span style="font-weight: 700;">release blockages&nbsp;&nbsp;</span>and enhance your mind-body-spirit connection<span style="font-weight: 700;">.</span>
                       <br>
                       <br>
                       <span style="font-size: 3.75rem;"> ”&nbsp;</span>
-                      <br>—&nbsp;<b>Cecile Core</b>
-                      <br>
                     </span>
                     <br>
                   </h2>
@@ -150,7 +145,8 @@
     </section>
     <section class="u-align-left u-clearfix u-image u-shading u-section-4" id="carousel_d788">
       <div class="u-clearfix u-sheet u-sheet-1">
-        <h1 class="u-custom-font u-font-playfair-display u-text u-text-body-color u-text-default-xs u-text-1"><b>“<span style="font-weight: 400;">What's hiding</span> right before your eyes”</b>
+        <h1 class="u-custom-font u-font-playfair-display u-text u-text-body-color u-text-default-xs u-text-1"><b>
+            <span style="font-weight: 400;">What's hiding</span> right before your eyes</b>
         </h1>
       </div>
     </section>
