--- a/index.html
+++ b/index.html
@@ -70,15 +70,12 @@
             <h1 class="u-align-center-sm u-align-center-xs u-custom-font u-font-playfair-display u-text u-text-default u-title u-text-1"><b></b>
               <span style="font-size: 4.5rem;">
                 <span style="font-weight: 400;">CECILE </span>
-                <span style="font-weight: 700;">CORE</span>
+                <span style="font-weight: 400;">CORE</span>
               </span>
               <br>
               <br>
             </h1>
-            <h3 class="u-align-center-sm u-align-center-xs u-text u-text-2">
-              <span style="font-weight: 700;">N</span><b>o bullshit<br>
-                <br>Holistic therapy</b>
-            </h3>
+            <h3 class="u-align-center-sm u-align-center-xs u-text u-text-2"> No bullshit&nbsp;&nbsp; |&nbsp; Holistic therapy</h3>
           </div>
         </div>
       </div>
@@ -98,8 +95,18 @@
                       <br>
                       <br>
                       <br>
-                      <span style="font-style: italic;">No healer can heal you without your consent and participation. You have the power to do that. Healers heal by reminding you of your inner strength. You have the "magic" in you. You have the omnipotence, the ability to defy everything and rise to the optimum level of curative energy.</span></b>
+                      <span style="font-style: italic;">No healer can heal you without your consent and participation.&nbsp;</span></b>
                     <br>
+                    <br><b>
+                      <span style="font-style: italic;">You have the power to do that.&nbsp;</span></b>
+                    <br>
+                    <br><b>
+                      <span style="font-style: italic;">Healers heal by reminding you of your inner strength.&nbsp;</span></b>
+                    <br>
+                    <br><b>
+                      <span style="font-style: italic;">You have the "magic" in you.&nbsp;</span></b>
+                    <br>
+                    <br>☾<br>
                   </h6>
                 </div>
               </div>
@@ -136,14 +143,14 @@
           <div class="u-layout-row">
             <div class="u-align-center-sm u-align-center-xs u-container-style u-image u-layout-cell u-left-cell u-size-30 u-image-1" data-image-width="5657" data-image-height="3772">
               <div class="u-container-layout u-valign-top u-container-layout-1">
-                <h3 class="u-custom-font u-font-playfair-display u-text u-text-1"><b> “J'ai gardé de cette merveilleuse expérience un parfum de confiance en moi, d'espoir et de sérénité...”</b>
+                <h3 class="u-custom-font u-font-playfair-display u-text u-text-1"><b> “Tu es venue à un moment où j'en avais vraiment besoin, comme si tu savais”</b>
                   <br>
                 </h3>
               </div>
             </div>
             <div class="u-align-center u-container-style u-image u-layout-cell u-right-cell u-size-30 u-image-2">
               <div class="u-container-layout u-container-layout-2">
-                <h3 class="u-custom-font u-font-playfair-display u-text u-text-2"><b>“Tu es venue à un moment où j'en avais vraiment besoin, comme si tu savais”</b>
+                <h3 class="u-custom-font u-font-playfair-display u-text u-text-2"><b> “J'en ai gardé un parfum de confiance en moi, d'espoir et de sérénité...”</b>
                   <br>
                 </h3>
               </div>
@@ -157,7 +164,7 @@
         <h1 class="u-custom-font u-font-playfair-display u-text u-text-default u-title u-text-1"><b> Core</b>
           <br>
         </h1>
-        <p class="u-custom-font u-heading-font u-large-text u-text u-text-default u-text-variant u-text-2"><b>Develop awareness about wellness &amp; spirituality&nbsp;</b>
+        <p class="u-custom-font u-heading-font u-large-text u-text u-text-default u-text-variant u-text-2"><b>Developing awareness about wellness &amp; spirituality&nbsp;</b>
         </p>
         <a href="Contact.html" class="u-btn u-button-style u-custom-color-2 u-custom-font u-heading-font u-btn-1">Contact</a>
       </div>
