--- a/Contact.html
+++ b/Contact.html
@@ -66,7 +66,9 @@
           <br>
         </h1>
         <p class="u-custom-font u-heading-font u-large-text u-text u-text-default u-text-variant u-text-2">
-          <span style="font-style: italic;">The part of something that is central to its existence or character<br>
+          <span style="font-style: italic;">
+            <span style="font-weight: 400;">The part of something that is central to its existence or character</span>
+            <br>
           </span><b>
             <br>"at the core"</b>
         </p>
@@ -91,7 +93,8 @@
                   </a>
                   <br>&nbsp;<a href="https://www.instagram.com/cecilecore.energy/" class="u-active-none u-border-none u-btn u-button-link u-button-style u-hover-none u-none u-text-active-palette-5-dark-3 u-text-body-color u-text-hover-custom-color-2 u-btn-3" target="_blank">cecilecore.energy</a>
                   <br>
-                  <br>-Montreal, QC-
+                  <br>
+                  <span style="font-style: italic; font-size: 1.25rem;">- Montreal (Quebec) -</span>
                 </p>
                 <img class="u-image u-image-contain u-image-default u-preserve-proportions u-image-3" src="images/image3.png" alt="" data-image-width="200" data-image-height="200">
                 <img class="u-image u-image-contain u-image-default u-preserve-proportions u-image-4" src="images/image5.png" alt="" data-image-width="245" data-image-height="200">
