--- a/Services.html
+++ b/Services.html
@@ -122,7 +122,7 @@
             <div class="u-align-center u-container-style u-list-item u-repeater-item">
               <div class="u-container-layout u-similar-container u-valign-top u-container-layout-2">
                 <img alt="" class="u-expanded-width u-image u-image-default u-image-2" data-image-width="1280" data-image-height="1920" src="images/chandra-oh-NuzKsljYNPc-unsplash.jpg">
-                <h3 class="u-text u-text-3"> Crystals + Aura massage</h3>
+                <h3 class="u-text u-text-3"> Crystals + Energy healing</h3>
                 <p class="u-custom-font u-heading-font u-text u-text-4"> $120 (save $50!)</p>
               </div>
             </div>
