--- a/Copie-Accueil.html
+++ b/Copie-Accueil.html
@@ -76,7 +76,7 @@
         <a href="Home.html" class="u-image u-logo u-image-1" data-image-width="800" data-image-height="600" title="Accueil">
           <img src="images/lune_logo.svg" class="u-logo-image u-logo-image-1">
         </a>
-        <h1 class="u-custom-font u-font-playfair-display u-text u-text-default u-title u-text-1"><b></b>
+        <h1 class="u-custom-font u-font-playfair-display u-text u-text-default-lg u-text-default-md u-text-default-sm u-text-default-xl u-title u-text-1"><b></b>
           <span style="font-weight: 400;">CECILE </span>
           <span style="font-weight: 400;">CORE</span>
           <br>
@@ -349,15 +349,17 @@
     
     
     <footer class="u-align-center-md u-align-center-sm u-align-center-xs u-clearfix u-footer u-grey-80" id="sec-108f"><div class="u-clearfix u-sheet u-sheet-1">
-        <p class="u-align-center-lg u-align-center-md u-align-center-xl u-text u-text-1">cecilecore.energy@gmail.com<br>438 600-7301&nbsp;<br>Montreal, QC, Canada<br>
+        <p class="u-align-center-lg u-align-center-md u-align-center-xl u-align-center-xs u-text u-text-1">
+          <a href="mailto:cecilecore.energy@gmail.com" class="u-active-none u-border-none u-btn u-button-link u-button-style u-hover-none u-none u-text-body-alt-color u-text-hover-custom-color-3 u-btn-1">cecilecore.energy@gmail.com<br>
+          </a>438 600-7301&nbsp;<br>Montreal, QC, Canada<br>
           <br>
           <br>
           <br>@ 2024 Cecile Core
         </p>
-        <a href="https://nicepage.com" class="u-image u-logo u-image-1" data-image-width="800" data-image-height="600">
+        <a href="https://nicepage.com" class="u-align-center-xs u-image u-logo u-image-1" data-image-width="800" data-image-height="600">
           <img src="images/lune_logo.svg" class="u-logo-image u-logo-image-1">
         </a>
-        <div class="u-align-left u-social-icons u-spacing-23 u-social-icons-1">
+        <div class="u-align-center-xs u-align-left-lg u-align-left-md u-align-left-sm u-align-left-xl u-social-icons u-spacing-23 u-social-icons-1">
           <a class="u-social-url" title="instagram" target="_blank" href="https://www.instagram.com/cecilecore.energy/"><span class="u-icon u-social-icon u-social-instagram u-text-custom-color-3"><svg class="u-svg-link" preserveAspectRatio="xMidYMin slice" viewBox="0 0 112 112" style=""><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#svg-d64f"></use></svg><svg class="u-svg-content" viewBox="0 0 112 112" x="0" y="0" id="svg-d64f"><circle fill="currentColor" cx="56.1" cy="56.1" r="55"></circle><path fill="#FFFFFF" d="M55.9,38.2c-9.9,0-17.9,8-17.9,17.9C38,66,46,74,55.9,74c9.9,0,17.9-8,17.9-17.9C73.8,46.2,65.8,38.2,55.9,38.2
       z M55.9,66.4c-5.7,0-10.3-4.6-10.3-10.3c-0.1-5.7,4.6-10.3,10.3-10.3c5.7,0,10.3,4.6,10.3,10.3C66.2,61.8,61.6,66.4,55.9,66.4z"></path><path fill="#FFFFFF" d="M74.3,33.5c-2.3,0-4.2,1.9-4.2,4.2s1.9,4.2,4.2,4.2s4.2-1.9,4.2-4.2S76.6,33.5,74.3,33.5z"></path><path fill="#FFFFFF" d="M73.1,21.3H38.6c-9.7,0-17.5,7.9-17.5,17.5v34.5c0,9.7,7.9,17.6,17.5,17.6h34.5c9.7,0,17.5-7.9,17.5-17.5V38.8
       C90.6,29.1,82.7,21.3,73.1,21.3z M83,73.3c0,5.5-4.5,9.9-9.9,9.9H38.6c-5.5,0-9.9-4.5-9.9-9.9V38.8c0-5.5,4.5-9.9,9.9-9.9h34.5
