--- a/Services.html
+++ b/Services.html
@@ -170,7 +170,7 @@
                 <img alt="" class="u-expanded-width u-image u-image-default u-image-3" data-image-width="1920" data-image-height="1280" src="images/studio-kealaula-YRrj9QMbv9o-unsplash.jpg">
                 <h3 class="u-text u-text-5"> Custom Pack</h3>
                 <p class="u-custom-font u-heading-font u-text u-text-6">
-                  <a href="Contact.html" class="u-active-none u-border-none u-btn u-button-link u-button-style u-hover-none u-none u-text-active-palette-5-dark-3 u-text-body-color u-text-hover-custom-color-2 u-btn-1"> Contact for prices</a>
+                  <a href="mailto:cecilecore.energy@gmail.com" class="u-active-none u-border-none u-btn u-button-link u-button-style u-hover-none u-none u-text-active-custom-color-2 u-text-body-color u-text-hover-custom-color-3 u-btn-1">Contact</a> for prices
                 </p>
               </div>
             </div>
