Add subscribe links

--- a/Home.html
+++ b/Home.html
@@ -42,7 +42,7 @@
   gtag('config', 'G-KLR391JT69');
 </script><meta data-intl-tel-input-cdn-path="intlTelInput/"></head>
   <body class="u-body u-xl-mode" data-lang="fr"><header class="u-clearfix u-header u-header" id="sec-c0d9"><div class="u-clearfix u-sheet u-sheet-1">
-        <nav class="u-menu u-menu-one-level u-offcanvas u-menu-1">
+        <nav class="u-menu u-menu-one-level u-offcanvas u-menu-1" data-position="Menu">
           <div class="menu-collapse" style="font-size: 1rem; letter-spacing: 0px;">
             <a class="u-button-style u-custom-left-right-menu-spacing u-custom-padding-bottom u-custom-text-active-color u-custom-text-hover-color u-custom-top-bottom-menu-spacing u-nav-link u-text-active-palette-1-base u-text-hover-palette-2-base" href="#">
               <svg class="u-svg-link" viewBox="0 0 24 24"><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#menu-hamburger"></use></svg>
@@ -54,6 +54,7 @@
             <ul class="u-nav u-unstyled u-nav-1"><li class="u-nav-item"><a class="u-button-style u-nav-link u-text-active-custom-color-2 u-text-hover-custom-color-3" href="Home.html" style="padding: 10px 20px;">Home</a>
 </li><li class="u-nav-item"><a class="u-button-style u-nav-link u-text-active-custom-color-2 u-text-hover-custom-color-3" href="About.html" style="padding: 10px 20px;">About</a>
 </li><li class="u-nav-item"><a class="u-button-style u-nav-link u-text-active-custom-color-2 u-text-hover-custom-color-3" href="Services.html" style="padding: 10px 20px;">Services</a>
+</li><li class="u-nav-item"><a class="u-button-style u-nav-link u-text-active-custom-color-2 u-text-hover-custom-color-3" href="https://cecilecore.myflodesk.com/signup" style="padding: 10px 20px;">Subscribe</a>
 </li></ul>
           </div>
           <div class="u-custom-menu u-nav-container-collapse">
@@ -63,6 +64,7 @@
                 <ul class="u-align-center u-nav u-popupmenu-items u-unstyled u-nav-2"><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Home.html">Home</a>
 </li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="About.html">About</a>
 </li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Services.html">Services</a>
+</li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="https://cecilecore.myflodesk.com/signup">Subscribe</a>
 </li></ul>
               </div>
             </div>
@@ -170,9 +172,6 @@
         <p class="u-align-center-lg u-align-center-md u-align-center-xl u-align-center-xs u-text u-text-1">
           <a href="mailto:cecilecore.energy@gmail.com" class="u-active-none u-border-none u-btn u-button-link u-button-style u-hover-none u-none u-text-body-alt-color u-text-hover-custom-color-3 u-btn-1">cecilecore.energy@gmail.com<br>
           </a>438 600-7301&nbsp;<br>Montreal, QC, Canada<br>
-          <br>
-          <br>
-          <br>@ 2024 Cecile Core
         </p>
         <a href="https://nicepage.com" class="u-align-center-xs u-image u-logo u-image-1" data-image-width="800" data-image-height="600">
           <img src="images/lune_logo.svg" class="u-logo-image u-logo-image-1">
@@ -188,6 +187,8 @@
 	"></path></svg></span>
           </a>
         </div>
+        <a href="https://cecilecore.myflodesk.com/signup" class="u-align-center-md u-align-center-sm u-align-center-xs u-border-2 u-border-custom-color-3 u-btn u-button-style u-custom-font u-heading-font u-hover-custom-color-3 u-none u-text-custom-color-3 u-text-hover-white u-btn-2">Join my email list</a>
+        <p class="u-align-center-lg u-align-center-md u-align-center-xl u-align-center-xs u-text u-text-2">@ 2024 Cecile Core</p>
       </div></footer>
     <section class="u-backlink u-clearfix u-grey-80">
       <a class="u-link" href="https://nicepage.com/website-templates" target="_blank">
